force-app/main/default/objects/LLC_BI__DocInfoTemplate__c/LLC_BI__DocInfoTemplate__c.object-meta.xml
<CustomObject>
    <label>DocInfo Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocInfo Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>