force-app/main/default/objects/LLC_BI__DocInfoTemplate__c/fields/LLC_BI__LoanType__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__LoanType__c</fullName>
    <description>This field is not currently used.</description>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
            <value>
                <fullName>Start-up</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>