force-app/main/default/objects/LLC_BI__DocInfoTemplate__c/fields/LLC_BI__Stage__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Stage__c</fullName>
    <description>This field is not currently used.</description>
    <label>Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>